re:update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .rts2_cache_cjs
 .rts2_cache_es
 .rts2_cache_umd
-dist
+
 node_modules
 
 code/rax/src
@@ -14,3 +14,4 @@ code-ts/react/src
 
 .DS_Store
 package-lock.json
+yarn.lock
