--- a/packages/hooksux/package.json
+++ b/packages/hooksux/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hooksux-test",
-  "version": "0.1.2",
+  "name": "hooksux",
+  "version": "0.0.1-alpha.3",
   "description": "Simple global store manager for react hooks.",
   "author": "ReAlign <realign@yeah.net> (https://github.com/realign)",
   "private": false,
@@ -13,8 +13,8 @@
   "syntax": {
     "esmodules": "dist/hooksux.modern.js"
   },
-  "types": "dist/react/src/react.d.ts",
-  "typings": "dist/react/src/react.d.ts",
+  "types": "dist/react.d.ts",
+  "typings": "dist/react.d.ts",
   "exports": {
     ".": {
       "browser": "dist/hooksux.module.js",
