--- a/example/react-app/package.json
+++ b/example/react-app/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "hooksux": "0.0.1-alpha.3",
+    "hooksux-rax": "^0.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.2.0",
